code25_all/scala/9286762.txt
1.def debug(msg: => AnyRef) = { println(String.valueOf(msg)) }
2.def debug(msg: () => AnyRef) = { println(String.valueOf(msg)) }

scala> def debug(msg: => AnyRef) = { println(String.valueOf(msg)) }
debug: (msg: => AnyRef)Unit

scala> debug("hi")
hi

scala> debug(() => "xx")
<function0>

scala> def debug(msg: () => AnyRef) = { println(String.valueOf(msg)) }
debug: (msg: () => AnyRef)Unit

scala> debug("hi")
<console>:9: error: type mismatch;
 found   : java.lang.String("hi")
 required: () => AnyRef
              debug("hi")
                   ^

